client/src/Components/ProfileShuffleDetails/ProfileShuffleDetails.css
#ProfileShuffleDetails {
    margin: 10% auto;
    padding: 10%;
    text-align: center;
}
#ProfileShuffleDetails #modal-title
{
    margin: 0 auto 1em auto;
}
#ProfileShuffleDetails #modal-description
{
    font-size: 1.2em;
    font-style: italic;
    font-weight: 600;
}
#ProfileShuffleDetails .SubmissionName
{
    margin: 5% auto 2% auto;
    color: whitesmoke;
    background-color: black;
    border-radius: 0.5em;
}
#ProfileShuffleDetails .GridList.Header
{
    background: black;
    border-radius: 1em;
    color: whitesmoke;
}
#ProfileShuffleDetails .GridList.Submission
{
    padding: 5% 0;
}

#ProfileShuffleDetails .GridList.Submission .GridListTile
{
    max-height: 5em;
}
#ProfileShuffleDetails .GridList.Submission:nth-child(8) 
{
    background-color: rgb(220, 220, 220);
    border: 1px black solid;
    border-left: black 1em solid;
    border-right: black 1em solid;
    border-radius: 0.8em;
}
#ProfileShuffleDetails .GridList.Submission:nth-child(10) 
{
    border: 1px black solid;
    border-left: black 1em solid;
    border-right: black 1em solid;
    border-radius: 0.8em;
}
#ProfileShuffleDetails .GridList.Submission:nth-child(12)
{
    background-color: rgb(220, 220, 220);
    border: 1px black solid;
    border-left: black 1em solid;
    border-right: black 1em solid;
    border-radius: 0.8em;
}
#ProfileShuffleDetails .GridList.Submission:nth-child(14)
{
    border: 1px black solid;
    border-left: black 1em solid;
    border-right: black 1em solid;
    border-radius: 0.8em;
}
#ProfileShuffleDetails .Backdrop {
    z-index: 1000;
    color: white;
}
#ProfileShuffleDetails hr {
    height: 3px;
    margin: 1em 0;
}
#ProfileShuffleDetails .disclaimer
{
    margin: 5% auto;
    font-size: 0.9em;
    font-style: italic;
    color: whitesmoke;
    background-color: black;
    border-radius: 1em;
    padding: 3%;
}
#ProfileShuffleDetails a
{
    text-decoration: none;
    cursor: pointer;
    color: black;
}
#ProfileShuffleDetails .ShuffleParticipant, #ProfileShuffleDetails .Round
{
    margin: 5% auto;
    box-shadow: 0 3px 5px black;
}
#ProfileShuffleDetails .ShuffleParticipant:hover, #ProfileShuffleDetails .Round:hover
{
    transform: scale(1.1);
    cursor: pointer;
}
#ProfileShuffleDetails .RoundFour
{
    background-color: rgb(226, 0, 0);
}
#ProfileShuffleDetails .RoundThree
{
    background-color: rgb(240, 128, 0);
}
#ProfileShuffleDetails .RoundTwo
{
    background-color: rgb(255, 196, 0);
}
#ProfileShuffleDetails .RoundOne
{
    background-color: rgb(129, 177, 34);
}

/* Desktop Devices */
@media only screen and (min-width : 1000px)
{
    #ProfileShuffleDetails .GridList.Submission
    {
        padding: 1%;
        height: 100%;
    }
    #ProfileShuffleDetails
    {
        margin: 5% auto;
        max-width: 50%;
        padding: 5%;
    }
    #ProfileShuffleDetails .ShuffleParticipant, #ProfileShuffleDetails .Round
    {
        box-shadow: 0 3px 5px grey;
        width: 2em;
        height: auto;
    }
}

